Updated text/ made info consistent with other pages

--- a/html/guideSections/thingsToDo.html
+++ b/html/guideSections/thingsToDo.html
@@ -68,7 +68,7 @@
                         <h5 class="card-title">What we think you should know</h5>
                         <p>We have up to 6 different cinemas within Belfast city centre, ranging from the most popular Multiplex cinema branch the Movie House on the Dublin Road to the Odeon in Victoria Square and the Odyssey in SSE Arena. With so many screens to choose from, all with comfortable seats and surround sound. Amongst students the Movie House would be the most popular as it’s located right beside Botanic and city centre. Get yourself down for their Crazy Tuesdays, £3.50 tickets all day or on any other day of the week spend £5 with your student card.
                             Whilst the Odyssey has special offers, the most popular being the student Sunday. When you can take full advantage of using your student card and get your ticket for £3.50 or even spend the entire day there watching 3 different films for just £9!</p>
-                            <p>Location: Movie House, 14 Dublin Rd, Belfast, BT2 7HN</p>
+                            <p>Movie House, 14 Dublin Rd, Belfast, BT2 7HN</p>
                             <p>Price:</p>
                             <ul>
                                 <li>Adults: £6.50</li>
@@ -78,7 +78,7 @@
                                 <li>Family Pass: £18.00 (2 adults & 2 kids)</li>
                                 <li>Morning Matinee: £3.50 (before noon)</li>
                             </ul>
-                            <p><a href="https://www.moviehouse.co.uk/Movie/Cinema/1/dublin_road">Movie House Dublin Road Website</a></p>
+                            <p><a href="https://www.moviehouse.co.uk/Movie/Cinema/1/dublin_road">Movie House Dublin Road Website.</a></p>
                             <p>Opening Hours</p>
                             <u><li>Monday - Sunday: 12 - 10pm</li></u>
                     </div>
@@ -95,11 +95,17 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                     <div class="card-body">
                         <h5 class="card-title">What we think you should know</h5>
-                        <p>Description</p>
-                        <p>Location</p>
-                        <p>Price Rating</p>
-                        <p>Link to website / socials if exists</p>
+                        <p>In Belfast there's plenty of places to choose from for venues for concerts from the SSE Arena, The Grand Opera House, Belfast Waterfront and The Limelight. The SSE Arena is an Odyssey Complex with the advantage of being both a sports and entertainment complex and it's located in the Titanic Quarter. There's also Northern Ireland's most iconic theatre which has been part of Belfast for over 100 years, the Grand Opera House. They presents a programme of drama, dance, opera, comedy, musicals, pantomime and family shows, so theres definitely plenty to choose from! The Waterfront Hall is one of Belfast's most iconic multi-purpose conference and entertianment centres. It's easily accessible as it's right in the middle of city centre! Last but least there's the famous Limelight, one of the most popular places for affordable gigs amongst students. It first opened in the late 80s and it was famous for hosting new talent with the likes of  Blur, Arctic Monkeys and The Strokes! Oasis famously celebrated the news of Definitely Maybe reaching No.1 with fans there during a live performance in 1994. The venue now caters up to 900 music lovers and comprises of two venues, a bar and a rooftop terrace!</p>
+
+                        <p>The SSE Arena can be found at 2 Queens Quay, Belfast BT3 9QQ.</p>
+
+                        <p><a href="https://www.ssearenabelfast.com/?">SSE Arena Website.</a></p>
+
                         <p>Opening Hours</p>
+                        <ul><li>Monday - Friday: 10am - 6pm</li>
+                            <li>Saturday: 10am - 5pm</li>
+                            <li>Sundays and Holidays: Closed except on event days.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -114,14 +120,22 @@
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                     <div class="card-body">
                         <h5 class="card-title">What we think you should know</h5>
-                        <p>Description</p>
-                        <p>Location</p>
-                        <p>Price Rating</p>
-                        <p>Link to website / socials if exists</p>
-                        <p>Opening Hours</p>
+                        <p>If you have a passion for fitness then here are some gyms within the Belfast area available for you. Pure gym, there's three separate gym locations throughout Belfast. Puregym members can benefit from 24 hour use of the facilities. It offers a spacious location as well as a number of training classes throughout the week to help you along.  There's also the PEC, a gym owned by Queens university. This gym offers cardio and weightlifting rooms, a swimming pool and a number of training classes. There's also Anytime fitness, which offers students 24 hour access 7 days a week. Their services also include personal training, small classes and personalised fitness plans for members.   </p>
+
+                        <p>22 Adelaide st, Belfast BT2 8DG/p>
+
+                        <p>Price:</p>
+                        <ul><li>Pure gym offers monthly membership at £14.99 per month in addition to day passes at £6.99 each across all sites.</li></ul>
+
+                        <p><a href="www.puregym.com">Pure Gym website.</a></p>
+
+                        <p>Opening Hours:</p>
+                        <ul>
+                            <li>Open 24/7</li></ul>
                     </div>
                 </div>
             </div>
+
             <div class="card">
                 <div class="card-header" id="headingFour">
                     <h5 class="mb-0">
@@ -133,11 +147,14 @@
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
                     <div class="card-body">
                         <h5 class="card-title">What we think you should know</h5>
-                        <p>Description</p>
-                        <p>Location</p>
-                        <p>Price Rating</p>
-                        <p>Link to website / socials if exists</p>
-                        <p>Opening Hours</p>
+                        <p> If you fancy a change of scenery a trip to Dublin may be the thing for you. Luckily the transport services in Belfast make a day trip to this city as easy as it is affordable.  This destination will involve you starting at Grand Lanyon Place (Central station) and finishing at Connolly railway in Dublin. In Dublin, you can explore Temple Bar, Dublin Castle and go see Phoenix Park. </p>
+
+                        <p>Price:</p>
+                        <ul><li>Day return: £35.00 this can be reduced if you have a Y-link card.</li></ul>
+
+                        <p><a href="https://journeyplanner.translink.co.uk/web/XSLT_TRIP_REQUEST2">Translink website.</a></p>
+
+                        
                     </div>
                 </div>
             </div>     
