updated footer for consistency on each page

--- a/html/help.html
+++ b/html/help.html
@@ -106,7 +106,7 @@
     <h2>Get In Touch</h2>
     <h3>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="../html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a></h3>
     <footer>
-        <div class="footer-copyright text-center py-3">© 2018 Copyright: Lost Student Guide</div>
+        <p>© 2018 Copyright: Lost Student Guide</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script type="text/javascript" src="../js/bootstrap.js"></script>
