--- a/html/guideSections/cafes.html
+++ b/html/guideSections/cafes.html
@@ -193,7 +193,7 @@
     </div>   
 <!-- Copyright -->
     <footer>
-        <div class="footer-copyright text-center py-3">© 2018 Copyright: Lost Student Guide</div>
+        <p>© 2018 Copyright: Lost Student Guide</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script type="text/javascript" src="../../js/bootstrap.js"></script>
