updated guide section card headers

--- a/html/guideSections/nightlife.html
+++ b/html/guideSections/nightlife.html
@@ -60,7 +60,7 @@
 
         <!-- Info on Limelight -->
         <div class="card">
-            <div class="card-header" id="headingOne">
+            <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseThree">
                     Limelight
@@ -85,7 +85,7 @@
         </div>
         <!-- Info on Thompsons -->
         <div class="card">
-            <div class="card-header" id="headingTwo">
+            <div class="card-header" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
                     Thompsons
@@ -111,7 +111,7 @@
         </div>
         <!-- Info on Kremlin -->
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingThree" data-toggle="collapse" data-target="#collapseThree">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     Kremlin
@@ -142,7 +142,7 @@
         </div>
         <!-- The Hatfield info -->
         <div class="card">
-            <div class="card-header" id="headingFour">
+            <div class="card-header" id="headingFour" data-toggle="collapse" data-target="#collapseFour">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                     The Hatfield
@@ -166,7 +166,7 @@
         </div>
         <!-- The Botanic Inn info -->
         <div class="card">
-            <div class="card-header" id="headingFive">
+            <div class="card-header" id="headingFive" data-toggle="collapse" data-target="#collapseFive">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
                     The Botanic Inn
