--- a/html/guideSections/tourismSpots.html
+++ b/html/guideSections/tourismSpots.html
@@ -58,7 +58,7 @@
          <div class="accordion" id="accordionExample">
         <!-- Titanic Museum info -->
         <div class="card">
-            <div class="card-header" id="headingOne">
+            <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseThree">
                     The Titanic Museum
@@ -86,7 +86,7 @@
         </div>
         <!-- Giants causeway info -->
         <div class="card">
-            <div class="card-header" id="headingTwo">
+            <div class="card-header" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
                     Giants Causeway
@@ -114,7 +114,7 @@
         </div>
         <!--Game of Thrones Tour Info-->
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingThree" data-toggle="collapse" data-target="#collapseThree">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     Game of Thrones Tour
@@ -133,7 +133,7 @@
         </div>
         <!-- Marble Arch Caves -->
         <div class="card">
-            <div class="card-header" id="headingFour">
+            <div class="card-header" id="headingFour" data-toggle="collapse" data-target="#collapseFour">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                     Marble Arch Caves
@@ -160,7 +160,7 @@
         </div>
         <!-- Belfast Hop on hop off info -->
         <div class="card">
-            <div class="card-header" id="headingFive">
+            <div class="card-header" id="headingFive" data-toggle="collapse" data-target="#collapseFive">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
                     Belfast Hop On Hop Off Tour Bus
