--- a/html/about.html
+++ b/html/about.html
@@ -40,7 +40,7 @@ img {
             <a class="nav-link" href="../index.html">Home</a>
         </li>
         <li class="nav-item active">
-                <a class="nav-link" href="contact.html">Contact Us<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="contact.html">About<span class="sr-only">(current)</span></a>
             </li>
         <li class="nav-item">
             <a class="nav-link" href="../html/guideSections/cafes.html">Cafes</a>
