--- a/html/guideSections/bars.html
+++ b/html/guideSections/bars.html
@@ -58,7 +58,7 @@
     <div class="container-fluid">
         <div class="accordion" id="accordionExample">
         <div class="card">
-            <div class="card-header" id="headingOne">
+            <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseThree">
                     QUB Speakeasy
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingTwo">
+            <div class="card-header" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
                     Lavery's
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingThree" data-toggle="collapse" data-target="#collapseThree">
                 <h5 class="mb-0">
                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                         The Perch
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingFour">
+            <div class="card-header" id="headingFour" data-toggle="collapse" data-target="#collapseFour">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                         The Dirty Onion and Yardbird
@@ -153,7 +153,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingFive">
+            <div class="card-header" id="headingFive" data-toggle="collapse" data-target="#collapseFive">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
                     Filthy McNastys
