--- a/html/guideSections/restaurants.html
+++ b/html/guideSections/restaurants.html
@@ -57,7 +57,7 @@
     <div class="container-fluid">
     <div class="accordion" id="accordionExample">
         <div class="card">
-            <div class="card-header" id="headingOne">
+            <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne">
             <h5 class="mb-0">
                 <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 French Village Cafe & Bistro
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingTwo">
+            <div class="card-header" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo">
             <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                 Umi Falafel
@@ -103,7 +103,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingThree">
+            <div class="card-header" id="headingThree" data-toggle="collapse" data-target="#collapseThree">
             <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     Maggie Mays
@@ -127,7 +127,7 @@
         </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingFour">
+            <div class="card-header" id="headingFour" data-toggle="collapse" data-target="#collapseFour">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                     Nando's
@@ -151,7 +151,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header" id="headingFive">
+            <div class="card-header" id="headingFive" data-toggle="collapse" data-target="#collapseFive">
                 <h5 class="mb-0">
                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                     Made In Belfast
