--- a/html/guideSections/thingsToDo.html
+++ b/html/guideSections/thingsToDo.html
@@ -56,7 +56,7 @@
     <div class="container-fluid">
         <div class="accordion" id="accordionExample">
             <div class="card">
-                <div class="card-header" id="headingOne">
+                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne">
                     <h5 class="mb-0">
                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseThree">
                         Cinema
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-header" id="headingTwo">
+                <div class="card-header" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo">
                     <h5 class="mb-0">
                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         Concerts
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-header" id="headingThree">
+                <div class="card-header" id="headingThree" data-toggle="collapse" data-target="#collapseThree" >
                     <h5 class="mb-0">
                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                         Gym
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-header" id="headingFour">
+                <div class="card-header" id="headingFour" data-toggle="collapse" data-target="#collapseFour">
                     <h5 class="mb-0">
                     <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                         Train to Dublin
