--- a/html/guideSections/restaurants.html
+++ b/html/guideSections/restaurants.html
@@ -77,6 +77,21 @@
                         <li>Saturday: 9am - 10pm</li>
                         <li>Sunday: 9am - 6pm</li>
                     </ul>
+                    <p>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapseExample">
+                          See it on a map
+                        </button>
+                      </p>
+                      <div class="collapse" id="collapse2">
+                        <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=French+Village,Belfast" allowfullscreen>
+                              </iframe>
+                        </div>
+                      </div>
                 </div>
             </div>
         </div>
@@ -98,7 +113,22 @@
                     <p>Opening Hours:</p>
                     <ul>
                         <li>Monday - Sunday: 12am - 9pm</li> 
-                    </ul>                        
+                    </ul>    
+                    <p>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                            See it on a map
+                        </button>
+                        </p>
+                        <div class="collapse" id="collapseExample">
+                        <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=Umi+Falafel,Belfast" allowfullscreen>
+                                </iframe>
+                        </div>
+                        </div>                    
                 </div>
             </div>
         </div>
@@ -121,7 +151,22 @@
                         <ul>
                             <li>Monday - Friday: 8am - 9:30pm</li>
                             <li>Saturday - Sunday: 9am - 10:30pm</li>
-                        </ul>    
+                        </ul>  
+                        <p>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapseExample">
+                            See it on a map
+                        </button>
+                        </p>
+                        <div class="collapse" id="collapse3">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=Maggie+Mays,Belfast" allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div>    
                 </div>
             </div>
         </div>
@@ -147,6 +192,21 @@
                         <li>Friday - Saturday: 12am - 11pm</li>
                         <li>Sunday: 12am - 10pm</li>
                     </ul>  
+                    <p>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapseExample">
+                            See it on a map
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapse4">
+                        <div class="card card-body">
+                            <iframe
+                            width="100%"
+                            height="450"
+                            frameborder="0" style="border:0"
+                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=Nandos,Belfast" allowfullscreen>
+                            </iframe>
+                        </div>
+                    </div>  
                 </div>
             </div>
         </div>
@@ -170,7 +230,22 @@
                             <li>Monday - Thursday: 12 - 9:30pm</li>
                             <li>Friday - Saturday: 12 - 10pm</li>
                             <li>Sunday: 12am - 9pm</li>
-                        </ul>     
+                        </ul> 
+                        <p>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapseExample">
+                            See it on a map
+                        </button>
+                        </p>
+                        <div class="collapse" id="collapse5">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=Made+In+Belfast,Belfast" allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div>      
                     </div>
                 </div>
             </div>
