added maps to bars

--- a/html/guideSections/bars.html
+++ b/html/guideSections/bars.html
@@ -57,123 +57,198 @@
     </nav>	
     <div class="container-fluid">
         <div class="accordion" id="accordionExample">
-        <div class="card">
-            <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne">
-                <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseThree">
-                    QUB Speakeasy
-                </button>
-                </h5>
-            </div>
-            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="card-body">
-                    <h5 class="card-title">What we think you should know</h5>
-                    <p>The Speakeasy in Queen's University aims to be the local for students in Queen's University. Don't feel discluded if you aren't a QUB student though, you are more than welcome!</p>
-                    <p>Lisburn Road</p>
-                    <p>Price Rating: £</p>
-                    <p><a href="http://www.qubsu.org/YourUnion/WhatsInside/TheSpeakeasy/">Visit their website for more information</a>></p>
-                    <p>Opening Hours</p>
-                    <ul>
-                        <li>Monday - Saturday: 8.30am - 10.30pm</li>
-                        <li>Sunday: 12pm - 10pm</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-header" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo">
-                <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
-                    Lavery's
-                </button>
-                </h5>
-            </div>
-            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <div class="card-body">
-                    <h5 class="card-title">What we think you should know</h5>
-                    <p>A long-standing traditional bar with sport on TV, a pool room with 18 tables, and a roof terrace.</p>
-                    <p>Bradbury Place</p>
-                    <p>££</p>
-                    <p><a href="https://www.laverysbelfast.com/">Visit their website for more information</a>></p>
-                    <p>Opening Hours</p>
-                    <ul>
-                        <li>Monday - Friday: 11:30am - 1.30am</li>
-                        <li>Saturday: 11:30 - 3am</li>
-                        <li>Sunday: 11:30am - 1.30am</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-header" id="headingThree" data-toggle="collapse" data-target="#collapseThree">
-                <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        The Perch
+            <div class="card">
+                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne">
+                    <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseThree">
+                        QUB Speakeasy
                     </button>
-                </h5>
-            </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                <div class="card-body">
-                    <h5 class="card-title">What we think you should know</h5>
-                    <p>The Perch is a beautiful rooftop cocktail bar that sits on top of a converted Victorian warehouse.</p>
-                    <p>Location: Franklin Street</p>
-                    <p>Price Rating: £££</p>
-                    <p><a href="https://www.theperchbelfast.com/">Visit their website for more information</a>></p>
-                    <p>Opening Hours</p>
-                    <ul>
-                        <li>Monday: 5pm - 1am</li>
-                        <li>Tuesday: 5pm - 12am</li>
-                        <li>Wedneday - Saturday: 5pm - 1am</li>
-                        <Li>Sunday: 5pm - 12am</Li>
-                    </ul>
+                    </h5>
+                </div>
+                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <h5 class="card-title">What we think you should know</h5>
+                        <p>The Speakeasy in Queen's University aims to be the local for students in Queen's University. Don't feel discluded if you aren't a QUB student though, you are more than welcome!</p>
+                        <p>Lisburn Road</p>
+                        <p>Price Rating: £</p>
+                        <p><a href="http://www.qubsu.org/YourUnion/WhatsInside/TheSpeakeasy/">Visit their website for more information</a>></p>
+                        <p>Opening Hours</p>
+                        <ul>
+                            <li>Monday - Saturday: 8.30am - 10.30pm</li>
+                            <li>Sunday: 12pm - 10pm</li>
+                        </ul>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapseExample">
+                                See it on a map
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapse1">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=The+Speakeasy,Belfast" allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div>  
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-header" id="headingFour" data-toggle="collapse" data-target="#collapseFour">
-                <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
-                        The Dirty Onion and Yardbird
-                </button>
-                </h5>
-            </div>
-            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-                <div class="card-body">
-                    <h5 class="card-title">What we think you should know</h5>
-                    <p>Traditional looking pub with a modern vibe including a Jameson barrel sculpture in the beer garden</p>
-                    <p>Hill Street</p>
-                    <p>££</p>
-                    <p><a href="http://www.thedirtyonion.com/">Visit their website for more information</a>></p>
-                    <p>Opening Hours</p>
-                    <ul>
-                        <li>Monday - Saturday: 12pm - 1am</li>
-                        <li>Sunday: 12pm - 12am</li>
-                    </ul>
+            <div class="card">
+                <div class="card-header" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo">
+                    <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseThree">
+                        Lavery's
+                    </button>
+                    </h5>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <h5 class="card-title">What we think you should know</h5>
+                        <p>A long-standing traditional bar with sport on TV, a pool room with 18 tables, and a roof terrace.</p>
+                        <p>Bradbury Place</p>
+                        <p>££</p>
+                        <p><a href="https://www.laverysbelfast.com/">Visit their website for more information</a>></p>
+                        <p>Opening Hours</p>
+                        <ul>
+                            <li>Monday - Friday: 11:30am - 1.30am</li>
+                            <li>Saturday: 11:30 - 3am</li>
+                            <li>Sunday: 11:30am - 1.30am</li>
+                        </ul>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapseExample">
+                                See it on a map
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapse2">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=Laverys,Belfast" allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div>  
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-header" id="headingFive" data-toggle="collapse" data-target="#collapseFive">
-                <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
-                    Filthy McNastys
-                </button>
-                </h5>
-            </div>
-            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
-                <div class="card-body">
-                    <h5 class="card-title">What we think you should know</h5>
-                    <p>The mix match furniture of Filthy McNastys, the quirky décor consisting of mannequins doubling as tall lamps and vintage vinyls adorning the walls create a unique charm which makes all walks of life feel welcome.</p>
-                    <p>Location: Dublin Road</p>
-                    <p>Price Rating: ££</p>
-                    <p><a href="http://www.thefilthyquarter.com/filthymcnastys/">Visit their website for more information</a></p>
-                    <p>Opening Hours</p>
-                    <ul>
-                        <li>Monday - Sunday: 1pm - 1am</li>
-                    </ul>
+            <div class="card">
+                <div class="card-header" id="headingThree" data-toggle="collapse" data-target="#collapseThree">
+                    <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            The Perch
+                        </button>
+                    </h5>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <h5 class="card-title">What we think you should know</h5>
+                        <p>The Perch is a beautiful rooftop cocktail bar that sits on top of a converted Victorian warehouse.</p>
+                        <p>Location: Franklin Street</p>
+                        <p>Price Rating: £££</p>
+                        <p><a href="https://www.theperchbelfast.com/">Visit their website for more information</a>></p>
+                        <p>Opening Hours</p>
+                        <ul>
+                            <li>Monday: 5pm - 1am</li>
+                            <li>Tuesday: 5pm - 12am</li>
+                            <li>Wedneday - Saturday: 5pm - 1am</li>
+                            <Li>Sunday: 5pm - 12am</Li>
+                        </ul>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapseExample">
+                                See it on a map
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapse3">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=The+Perch,Belfast" allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div>  
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="card">
+                <div class="card-header" id="headingFour" data-toggle="collapse" data-target="#collapseFour">
+                    <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+                            The Dirty Onion and Yardbird
+                    </button>
+                    </h5>
+                </div>
+                <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <h5 class="card-title">What we think you should know</h5>
+                        <p>Traditional looking pub with a modern vibe including a Jameson barrel sculpture in the beer garden</p>
+                        <p>Hill Street</p>
+                        <p>££</p>
+                        <p><a href="http://www.thedirtyonion.com/">Visit their website for more information</a>></p>
+                        <p>Opening Hours</p>
+                        <ul>
+                            <li>Monday - Saturday: 12pm - 1am</li>
+                            <li>Sunday: 12pm - 12am</li>
+                        </ul>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapseExample">
+                                See it on a map
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapse4">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=The+Dirty+Onion,Belfast" allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div>  
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="headingFive" data-toggle="collapse" data-target="#collapseFive">
+                    <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+                        Filthy McNastys
+                    </button>
+                    </h5>
+                </div>
+                <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <h5 class="card-title">What we think you should know</h5>
+                        <p>The mix match furniture of Filthy McNastys, the quirky décor consisting of mannequins doubling as tall lamps and vintage vinyls adorning the walls create a unique charm which makes all walks of life feel welcome.</p>
+                        <p>Location: Dublin Road</p>
+                        <p>Price Rating: ££</p>
+                        <p><a href="http://www.thefilthyquarter.com/filthymcnastys/">Visit their website for more information</a></p>
+                        <p>Opening Hours</p>
+                        <ul>
+                            <li>Monday - Sunday: 1pm - 1am</li>
+                        </ul>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapseExample">
+                                See it on a map
+                            </button>
+                        </p>
+                        <div class="collapse" id="collapse5">
+                            <div class="card card-body">
+                                <iframe
+                                width="100%"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=Filthy+McNastys,Belfast" allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div>  
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Copyright -->
