added maps to nightlife

--- a/html/guideSections/nightlife.html
+++ b/html/guideSections/nightlife.html
@@ -85,6 +85,21 @@
                         <li>McDonald's - 2-4 Donegall Place
                         <li>Subway -  461 Ormeau Rd</li>
                     </ul>
+                    <p>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapseExample">
+                            See it on a map
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapse1">
+                        <div class="card card-body">
+                            <iframe
+                            width="100%"
+                            height="450"
+                            frameborder="0" style="border:0"
+                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=Limelight,Belfast" allowfullscreen>
+                            </iframe>
+                        </div>
+                    </div>  
                 </div>
             </div>
         </div>
@@ -116,6 +131,21 @@
                        <li>McDonald's - 2-4 Donegall Place</li>
                         <li>Subway -  461 Ormeau Rd</li>
                     </ul>
+                    <p>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapseExample">
+                            See it on a map
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapse2">
+                        <div class="card card-body">
+                            <iframe
+                            width="100%"
+                            height="450"
+                            frameborder="0" style="border:0"
+                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=Thompsons,Belfast" allowfullscreen>
+                            </iframe>
+                        </div>
+                    </div>  
                 </div>
             </div>
         </div>
@@ -152,6 +182,21 @@
                         <li>Burger Kind - Donegall Place</li>
                        <li>McDonald's - 2-4 Donegall Place</li>
                     </ul>
+                    <p>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapseExample">
+                            See it on a map
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapse3">
+                        <div class="card card-body">
+                            <iframe
+                            width="100%"
+                            height="450"
+                            frameborder="0" style="border:0"
+                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=Kremlin,Belfast" allowfullscreen>
+                            </iframe>
+                        </div>
+                    </div>  
                 </div>
             </div>
         </div>
@@ -183,6 +228,21 @@
                         <li>Greggs - Botanic</li>
                         <li>The Sphinx - Botanic</li>
                     </ul>
+                    <p>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapseExample">
+                            See it on a map
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapse4">
+                        <div class="card card-body">
+                            <iframe
+                            width="100%"
+                            height="450"
+                            frameborder="0" style="border:0"
+                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=The+Hatfield,Belfast" allowfullscreen>
+                            </iframe>
+                        </div>
+                    </div>  
                 </div>
             </div>
         </div>
@@ -218,6 +278,21 @@
                         <li>Greggs - Botanic</li>
                         <li>The Sphinx - Botanic</li>
                     </ul>
+                    <p>
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapseExample">
+                            See it on a map
+                        </button>
+                    </p>
+                    <div class="collapse" id="collapse5">
+                        <div class="card card-body">
+                            <iframe
+                            width="100%"
+                            height="450"
+                            frameborder="0" style="border:0"
+                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAL7uINa2R9vTlOL8OeAHvlQgwfyG8saSg&q=The+Botanic+Inn,Belfast" allowfullscreen>
+                            </iframe>
+                        </div>
+                    </div>  
                 </div>
             </div>
             </div>
